welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: not found: value L
  for (j <- 0 to L-1){
                 ^ColumnByColumn:2: error: not found: value H
    for (i <- 0 to H-1){
                   ^