welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  for (j <- 0 to L-1){
    for (i <- 0 to H-1){
      setPos(i,j)
    }
  }
}